[gd_scene load_steps=2 format=3 uid="uid://new_game_ui"]

[ext_resource type="Script" uid="uid://new_game_ui_script" path="res://ui/GameUI.gd" id="1"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="StartStopButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 910.0
offset_top = 20.0
offset_right = 1010.0
offset_bottom = 70.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Start (Space)"

[node name="SpeedButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 860.0
offset_top = 80.0
offset_right = 1060.0
offset_bottom = 130.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HalfSpeedButton" type="Button" parent="SpeedButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Half Speed"

[node name="FullSpeedButton" type="Button" parent="SpeedButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Full Speed"